<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context=".FormRegister">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_form_login"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:background="@color/white"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"

        />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:background="@color/white"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"

        />


    <Button
        android:id="@+id/bt_logar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_button_logar"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:padding="15dp"
        android:backgroundTint="@color/white"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/txt_telaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_form_login_cadastro"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />


</LinearLayout>